syntax = "proto3";

package register;

option go_package="github.com/tehrelt/mu/proto/register;registerpb";

service RegisterService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
}

enum Role {
    ROLE_UNKNOWN = 0;
    ROLE_REGULAR = 1;
    ROLE_ADMIN = 2;
}

message User {
    string last_name = 1;
    string first_name = 2;
    string middle_name = 3;
    string email = 4;
    string phone = 5;
    int32 passport_number = 6;
    int32 passport_series = 7;
    string snils = 8;
    string password = 9;
    repeated Role roles = 10;
}

message RegisterRequest {
    User user = 1;
}

message RegisterResponse {
    Tokens tokens = 1;
}

message Tokens {
    string access_token = 1;
    string refresh_token = 2;
}
