syntax = "proto3";

package auth;

option go_package="github.com/proto/auth;authpb";

service AuthService {
    rpc Authorize(AuthorizeRequest) returns (AuthorizeResponse);
}

message AuthorizeRequest {
    string id = 1;
}

message AuthorizeResponse {
    string id = 1;
}